--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "puppeteer": "^19.6.3",
-    "puppeteer-chromium-resolver": "^19.1.0"
+    "puppeteer-chromium-resolver": "^19.1.0",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "name": "ghanamps_node",
   "version": "0.0.1",
