--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-schedule": "^2.1.1",
     "puppeteer": "^19.6.3",
     "puppeteer-chromium-resolver": "^19.1.0",
     "sequelize": "^6.28.0",
